examples/test/testpolicy19205.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19205
  namespace: namespace96
spec:
  podSelector:
    matchLabels:
      key1: value33
      key28: value15
      key11: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value45
          key34: value44
      podSelector:
        matchLabels:
          key44: value34
          key34: value3
          key27: value46
